--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "inquirer": "^7.1.0",
     "keypather": "^3.0.0",
     "marked": "^1.2.0",
+    "node-fetch": "^2.6.1",
     "notifications-node-client": "^4.7.2",
     "nunjucks": "^3.2.1",
     "portscanner": "^2.1.1",
